--- a/meetups/templates/meetups/index.html
+++ b/meetups/templates/meetups/index.html
@@ -7,11 +7,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All Meetups</title>
     <link rel="stylesheet" href="{% static 'meetups/styles/base.css' %}">
+    <link rel="stylesheet" href="{% static 'meetups/styles/all-meetups.css' %}">
 </head>
 <body>
-    <h1>All Meetups!!</h1>
-    <p>Hello World !</p>
+    <header id = 'main-header'>
+        <nav><a href="/meetups" id = "main-logo">Django Meetups</a></nav>
+        <h1>We got great meetu[ps coming up!</h1>
+        <p>Find the one that best suits your need!</p>
+    </header>
+    <main>
+        <section>
+            <h2>Upcoming Meetups</h2>
+            <ol>
+                {% for meetup_item in meetups %}
+                <li class = "meetup-item">
+                    <article>
+                        <div class = "meetup-summary">
+                            <div class = "meetup-image">
+                                <img src="" alt="">
+                            </div>
+                            <div class = "meetup-details">
+                                <h3>{{ meetup_item.title}}</h3>
+                                <address>{{ meetup_item.location}}</address>
+                            </div>
 
-    <h2>{{ meetups.0.title}}</h2>
+                        </div>
+                        <div class = "meetup-actions">
+                            <a href="" class = "btn">More details</a>
+
+                        </div>
+                    </article>
+                </li>
+                {% endfor %}
+            </ol>
+        </section>
+    </main>
 </body>
 </html>
